--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "leancloud-storage": "^3.6.8"
+    "leancloud-storage": "^3.6.8",
+    "plupload": "^2.3.2",
+    "qiniu": "^7.1.3",
+    "qiniu-js": "^1.0.22"
   }
 }
